<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/main"
    tools:context=".activity.BmiActivity">


    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolBar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:elevation="4dp"
        android:layout_alignParentTop="true"
        android:background="@color/primary"
        app:titleTextColor="@color/black"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_below="@id/toolBar"
        android:background="@color/primaryAccentPro"
        >


        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            app:hintTextColor="@color/black"
            app:boxStrokeColor="@color/black"
            android:layout_marginVertical="@dimen/_5sdp"
            android:layout_marginHorizontal="@dimen/_10sdp"
            android:layout_height="wrap_content">

            <EditText
                android:layout_below="@id/toolBar"
                android:inputType="number"
                android:id="@+id/weightEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/weight_kg" />



        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            app:hintTextColor="@color/black"
            app:boxStrokeColor="@color/black"
            android:layout_marginVertical="@dimen/_5sdp"
            android:layout_marginHorizontal="@dimen/_10sdp"
            android:layout_height="wrap_content">

            <EditText
                android:inputType="number"
                android:id="@+id/heightFeetEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/weightEditText"
                android:layout_marginTop="16dp"
                android:hint="@string/height_feet" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_marginVertical="@dimen/_5sdp"
            android:layout_marginHorizontal="@dimen/_10sdp"
            android:layout_width="match_parent"
            app:hintTextColor="@color/black"
            app:boxStrokeColor="@color/black"
            android:layout_height="wrap_content">

            <EditText
                android:inputType="number"
                android:id="@+id/heightInchesEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/heightFeetEditText"
                android:layout_marginTop="16dp"
                android:hint="@string/height_inches" />

        </com.google.android.material.textfield.TextInputLayout>




        <Button
            android:layout_marginVertical="@dimen/_5sdp"
            android:layout_marginHorizontal="@dimen/_10sdp"
            android:textColor="@color/black"
            android:backgroundTint="@color/primary"
            android:id="@+id/calculateButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/heightInchesEditText"
            android:layout_marginTop="16dp"
            android:text="@string/calculate_bmi" />

        <TextView
            android:layout_marginVertical="@dimen/_5sdp"
            android:layout_marginHorizontal="@dimen/_10sdp"
            android:id="@+id/bmiResultTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/calculateButton"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/solaimanlipi"
            android:text="@string/your_bmi"
            android:textSize="18sp" />

        <ProgressBar
            android:layout_marginVertical="@dimen/_5sdp"
            android:layout_marginHorizontal="@dimen/_10sdp"
            android:id="@+id/bmiProgressBar"
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/bmiResultTextView"
            android:layout_marginTop="16dp"
            android:max="100"
            />


    </LinearLayout>














    <LinearLayout
        android:layout_marginTop="@dimen/_5sdp"
        android:id="@+id/banner_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_alignParentBottom="true"
        />
</RelativeLayout>
